css button modifiés

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -207,3 +207,10 @@ button {
   will-change: '';
   -webkit-tap-highlight-color: transparent;
 }
+button:hover {
+  background-color: #CACBCD;
+  background-image: none;
+  -webkit-box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
+  box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
+  color: rgba(0, 0, 0, 0.8);
+}
