--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -23,6 +23,17 @@ body {
   font-smoothing: antialiased;
 }
 
+
+label {
+  display: block;
+  margin: 0em 0em 0.28571429rem 0em;
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 0.92857143em;
+  font-weight: bold;
+  text-transform: none;
+  text-align: left;
+}
+
 /* Border-Box */
 
 *,
@@ -213,4 +224,29 @@ button:hover {
   -webkit-box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
   box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
   color: rgba(0, 0, 0, 0.8);
+}
+
+select {
+  display: block;
+  height: auto;
+  width: 40%;
+  background: #FFFFFF;
+  border: 1px solid rgba(34, 36, 38, 0.15);
+  border-radius: 0.28571429rem;
+  -webkit-box-shadow: 0em 0em 0em 0em transparent inset;
+  box-shadow: 0em 0em 0em 0em transparent inset;
+  padding: 0.62em 1em;
+  color: rgba(0, 0, 0, 0.87);
+  -webkit-transition: color 0.1s ease, border-color 0.1s ease;
+  transition: color 0.1s ease, border-color 0.1s ease;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+
+}
+
+#leftsearch {
+  float: left;
+}
+#rightsearch {
+  float: right;
 }
