--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -34,21 +34,18 @@ body {
 /*
 Above CSS based on normalize.css
 */
-
-
 #app {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+  margin-top: 50px;
 }
 h1, h2 {
   font-size: 2em;
   font-weight: normal;
-  color: blue!important;
   margin: 0.67em 0;
+  font-family: 'Oswald', sans-serif;
 }
 ul {
   list-style-type: none;
@@ -62,15 +59,18 @@ a {
   color: #42b983;
 }
 
+.table-responsive-xl{
+  margin-bottom: 30px;
+}
+
 table {
-  width: 100%;
   background: #FFFFFF;
   margin: 1em 0em;
   border: 1px solid rgba(34, 36, 38, 0.15);
   -webkit-box-shadow: none;
   box-shadow: none;
   border-radius: 0.28571429rem;
-  text-align: left;
+  text-align: center;
   color: rgba(0, 0, 0, 0.87);
   border-collapse: separate;
   border-spacing: 0px;
@@ -81,10 +81,12 @@ able:first-child {
 table:last-child {
   margin-bottom: 0em;
 }
+
 table th,
 table td {
   -webkit-transition: background 0.1s ease, color 0.1s ease;
   transition: background 0.1s ease, color 0.1s ease;
+  border: #000 2px;
 }
 table thead {
   -webkit-box-shadow: none;
@@ -92,9 +94,9 @@ table thead {
 }
 table thead th {
   cursor: auto;
-  background: #d8eafb;
+  background: #0A6E8F;
   text-align: inherit;
-  color: rgba(0, 0, 0, 0.87);
+  color: #FFF;
   padding: 0.92857143em 0.78571429em;
   vertical-align: inherit;
   font-style: none;
