--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -74,7 +74,13 @@ a {
   margin-bottom: 30px;
 }
 
+.table-center{
+  display: flex;
+  justify-content: center;
+}
+
 table {
+  width: 80%;
   background: #FFFFFF;
   margin: 1em 0em;
   border: 1px solid rgba(34, 36, 38, 0.15);
@@ -382,6 +388,7 @@ select {
 #leftsearch {
   float: left;
   padding-bottom: 30px;
+  padding-left: 150px;
 }
 
 #rightsearch {
@@ -391,7 +398,8 @@ select {
 
 .btn-center{
   display: flex;
-  justify-content: center;
+  justify-content: left;
+  padding-left: 190px;
 }
 
 .modal-backdrop {
