--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -217,6 +217,15 @@ table td.active {
   color: rgba(0, 0, 0, 0.87) !important;
 }
 
+.floated {
+  float: left;
+  margin-right: 0em;
+  margin-left: 0.25em;
+  background-color: #2185D0;
+  color: #FFFFFF;
+  text-shadow: none;
+  background-image: none;
+}
 
 input {
   position: relative;
