--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -144,7 +144,7 @@ table tr:first-child td {
   border-top: none;
 }
 table tr:hover td {
-  background-color: #FBE7E7;
+  background-color: #D7DEE0;
 }
 
 table tr.active td {
@@ -263,7 +263,7 @@ button {
   outline: none;
   border: none;
   vertical-align: baseline;
-  background: #E0E1E2 none;
+  background: #D7DEE0 none;
   color: rgba(0, 0, 0, 0.6);
   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   margin: 0em 0.25em 0em 0em;
