--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -113,7 +113,7 @@ table thead th {
   cursor: auto;
   background: #cddfef;
   text-align: inherit;
-  color: #FFF;
+  color: #000;
   padding: 0.92857143em 0.78571429em;
   vertical-align: middle !important;
   /*font-style: none;*/
